# demo-lens

./: .dockerignore  .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  ANALYTICS_DOCUMENTATION.md  Dockerfile  README.md  add-missing-tables.sql  appsettings.Example.json  azure-migration.sql  azuredeploy.json  check_spawn_positions.sql  create-schema.sql  database_performance_indexes.sql  docker-compose.yml  docker-entrypoint.sh  init-db.sql  query_demo_data.cs  query_rounds.cs
.github/workflows/: deploy.yml
CS2DemoParser/: CS2DemoParser.csproj  ENHANCEMENT_GUIDE.md  Program.cs  README.md  appsettings.json  demo_info.csv  matches.csv  players.csv
CS2DemoParser/Data/: CS2DemoContext.cs  CS2DemoContextFactory.cs
CS2DemoParser/Migrations/: 20250629134818_InitialSqlServerFinal.Designer.cs  20250629134818_InitialSqlServerFinal.cs  20250630224256_AddDemoSource.Designer.cs  20250630224256_AddDemoSource.cs  20250827113234_UpdatedModel.Designer.cs  20250827113234_UpdatedModel.cs  20251003233018_AddRoundTypeIdentifiers.Designer.cs  20251003233018_AddRoundTypeIdentifiers.cs  AddEnhancedAnalyticsTables.sql  CS2DemoContextModelSnapshot.cs
CS2DemoParser/Models/: AdvancedPlayerStats.cs  (+53 more)
CS2DemoParserWeb/: CS2DemoParserWeb.csproj  Program.cs  appsettings.Production.json  appsettings.json  test_heatmap.js
DatabaseViewer/: DatabaseViewer.csproj  Program.cs
QueryDemoData/: Program.cs  QueryDemoData.csproj
QueryRounds/: Program.cs
cs2-faceit-pipeline/: Cargo.toml
cs2-ml-pipeline/: AI_INTEGRATION_GUIDE.md  Cargo.toml
cs2-ml-pipeline/src/: extractors.rs  main.rs  models.rs
(+44 files in other folders)
