[package]
name = "cs2-ml-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
csv = "1.3.1"
futures-util = "0.3"
rayon = "1.11.0"
rust_decimal = "1.38.0"
serde = { version = "1.0.228", features = ["derive"] }
tiberius = { version = "0.12", features = ["chrono", "rust_decimal"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
